Actualizadas las traducciones.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -1498,7 +1498,7 @@
     "tax-transport": "Impuestos del transporte",
     "taxes": "Impuestos",
     "telemetry-data-to-send": "Las instalaciones registradas notifican periódicamente la versión de FacturaScripts, PHP, país, idioma y listado de plugins.",
-    "telephone-prefix": "Prefijo telefónico",
+    "telephone-prefix": "Telefonní předpona",
     "template": "Plantilla",
     "template-error": "Error en la plantilla",
     "template-not-found": "Plantilla no encontrada",
@@ -1527,7 +1527,7 @@
     "title-url": "Título (URL)",
     "to": "Para",
     "to-refund": "A devolver",
-    "to-report": "Informar",
+    "to-report": "Nahlásit",
     "today": "Hoy",
     "total": "Total",
     "total-amount": "Suma total",
