--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -212,8 +212,8 @@
     "carrier": "Träger",
     "carriers": "Träger",
     "cash": "Bar",
-    "categories": "Categorias",
-    "category": "Categoría",
+    "categories": "Kategorien",
+    "category": "Kategorie",
     "cc": "CC",
     "center": "Mitte",
     "change": "Veränderung",
@@ -223,14 +223,14 @@
     "charts": "Grafiken",
     "chat": "Chat",
     "check-table": "Fehlerprüfung Tabelle %1$s",
-    "check-vies": "Comprobar VIES",
+    "check-vies": "VIES überprüfen",
     "checked": "geprüft",
-    "children": "Niño",
+    "children": "Kind",
     "children-accounts": "Unterkonten",
     "choose-currency": "Währung auswählen",
     "choose-doc-type": "Dokumenttyp auswählen",
     "choose-employee": "Mitarbeiter auswählen",
-    "choose-files": "Seleccionar archivos",
+    "choose-files": "Dateien auswählen",
     "choose-payment-method": "Zahlungsmethode auswählen",
     "choose-serie": "Serie auswählen",
     "choose-source": "Ursprung wählen",
