--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1393,7 +1393,7 @@
     "social-security-number": "Gizarte segurantza zenbakia",
     "sort": "Ordena",
     "sort-by-column": "Ordenar por columna",
-    "sort-by-date-asc": "Ordenar por fecha desc.",
+    "sort-by-date-asc": "Ordenar por fecha asc.",
     "sort-by-date-desc": "Ordenar por fecha desc.",
     "sort-by-ref-asc": "Ordenar por referencia asc.",
     "sort-by-ref-desc": "Ordenar por referencia desc.",
