--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -525,7 +525,7 @@
     "enabled-plugins": "Plugin attivi",
     "encrypt": "Crittazione",
     "end-date": "Data di fine",
-    "end-time": "end-time",
+    "end-time": "tempo finale",
     "epigraph": "Epigrafe",
     "epigraph-group": "Gruppo epigrafico",
     "epigraphs": "Le epigrafi",
