--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -292,7 +292,7 @@
     "confirm": "Confirmar",
     "confirm-delete": "¿Realmente desea eliminar esto?",
     "connect": "Conectar",
-    "contact": "Contacto",
+    "contact": "Kontakt",
     "contact-data": "Datos del contacto",
     "contact-info": "Información de contacto",
     "contact-information": "Información de contacto",
