--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -295,7 +295,7 @@
     "contact": "Contato",
     "contact-data": "Dados de contato",
     "contact-info": "Informações de contato",
-    "contact-information": "contact-information",
+    "contact-information": "Información de contacto",
     "contact-person": "Pessoa de contato",
     "contacts": "Contatos",
     "context": "Contexto",
