Actualizadas las traducciones.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -1547,7 +1547,7 @@
     "transfers-stock": "Transferencias de stock",
     "translation": "Traducción",
     "translations": "Traducciones",
-    "travel": "Viaje",
+    "travel": "Cestování",
     "try-again-later": "Pruebe de nuevo más tarde",
     "tuesday": "Martes",
     "type": "Tipo",
@@ -1561,17 +1561,17 @@
     "type-success": "Tipo correcto",
     "type-warning": "Tipo advertencia",
     "unbalance": "Descuadre",
-    "unbalanced-entry": "Asiento descuadrado",
+    "unbalanced-entry": "Nevyrovnaný záznam",
     "unchecked": "No comprobado",
     "under-minimums": "Bajo mínimos",
     "undo": "Deshacer",
     "unit-profit": "Beneficio unit.",
     "unit-purchase-price": "Precio compra unit.",
     "unit-sale-price": "Precio venta unit.",
-    "unlimited": "Ilimitado",
+    "unlimited": "Neomezený",
     "unlink": "Desvincular",
     "unlink-file": "Desvincular archivo",
-    "unlink-install-ok": "Instalación borrada del registro correctamente.",
+    "unlink-install-ok": "Instalace byla úspěšně odebrána záznamu.",
     "unlock-entry": "Desbloquear",
     "unpaid": "Impagado",
     "until-accounting-entry": "Hasta asiento",
@@ -1583,14 +1583,14 @@
     "update-time": "Hora de actualización",
     "updated-model": "Actualizado %model% (%key%) %desc%",
     "updater": "Actualizador",
-    "updating-attached-relations": "Actualizando contadores de archivos adjuntos",
+    "updating-attached-relations": "Aktualizace připojených vztahů",
     "upload-file": "Subir archivo",
     "uploaded-at": "Cargado en",
     "url": "Dirección web",
     "use-gaps": "Usar huecos",
-    "use-holes-invoices-esp": "Si desmarcas el uso de huecos en facturas y eliminas alguna se quedará el hueco en la facturación y tendrás problemas con hacienda",
+    "use-holes-invoices-esp": "Pokud odškrtnete použítí mezer ve fakturách a některá odstraníte, zůstane v fakturaci mezera a budete mít problémy s pokladnou",
     "user": "Usuario",
-    "user-and-config": "Usuario y configuración",
+    "user-and-config": "Uživatel a konfigurace",
     "users": "Usuarios",
     "using-apc": "Usando cache APC",
     "using-filecache": "Usando Filecache",
