--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -249,19 +249,19 @@
     "closing-accounting-completed": "Jahrgang erfolgreich abgeschlossen",
     "closing-closing-concept": "Abschlussbuchung für Jahrgang %exercise%",
     "closing-opening-concept": "Öffnungsbucheng für Jahrgang %exercise%",
-    "closing-operation": "Cierre",
+    "closing-operation": "Abschluss",
     "closing-regularization-concept": "Regulierungsbuchung für Geschäftsjahr %exercise%",
     "codbarras": "Strichcode",
     "code": "Code",
     "codiso": "ISO-Code",
     "color": "Farbe",
-    "color-danger": "Color peligro",
-    "color-dark": "Color oscuridad",
-    "color-info": "Color info",
-    "color-light": "Color luz",
-    "color-primary": "Color primario",
-    "color-secondary": "Color secundario",
-    "color-success": "Color éxito",
+    "color-danger": "Gefahrenfarbe",
+    "color-dark": "Dunkle Farbe",
+    "color-info": "Informationsfarbe",
+    "color-light": "Helle Farbe",
+    "color-primary": "Primärfarbe",
+    "color-secondary": "Sekundärfarbe",
+    "color-success": "Erfolgsfarbe",
     "color-warning": "Color advertencia",
     "colors": "Farben",
     "column": "Columna",
