--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1342,7 +1342,7 @@
     "send-mail": "Emaila bidali",
     "send-mail-error": "Errorea posta elektronikoa bidaltzean",
     "send-mail-ok": "Posta ondo bidalia",
-    "send-videos": "Enviar vídeos",
+    "send-videos": "Bideoak Bidali",
     "sent-a-audio": "Audio bat bidali du",
     "sent-a-document": "Dokumentu bat bidali du",
     "sent-a-location": "Kokapen bat bidali du",
@@ -1389,16 +1389,16 @@
     "sketch-invoice-warning": "Faktura hau zirriborro bat dat. Ofiziala egin ezazu bere egoera igortuta-ra aldatuz.",
     "small": "Txikia",
     "smaller-than": "Baino txikiagoa",
-    "soap-extension-not-installed": "La extensión SOAP no está activada en PHP. Contacta con tu proveedor de hosting para activarla.",
+    "soap-extension-not-installed": "SOAP luzapena ez dago gaituta PHPn. Jarri harremanetan zure hosting hornitzailerarekin gaitzeko.",
     "social-security-number": "Gizarte segurantza zenbakia",
     "sort": "Ordena",
-    "sort-by-column": "Ordenar por columna",
+    "sort-by-column": "Zutabean sailkatu",
     "sort-by-date-asc": "Ordenar por fecha asc.",
-    "sort-by-date-desc": "Ordenar por fecha desc.",
-    "sort-by-ref-asc": "Ordenar por referencia asc.",
-    "sort-by-ref-desc": "Ordenar por referencia desc.",
-    "sorted-asc": "Ordenado ascendente",
-    "sorted-desc": "Ordenado descendente",
+    "sort-by-date-desc": "Dataren arabera sailkatu azkenean",
+    "sort-by-ref-asc": "Erreferentziaren arabera sailkatu goranz",
+    "sort-by-ref-desc": "Erreferentziaren arabera sailkatu beheranz",
+    "sorted-asc": "Gorantz sailkatuta",
+    "sorted-desc": "Beherantz sailkatuta",
     "source": "Hornidura",
     "source-code": "Iturburu-kodea",
     "special-account": "Kontu berezia",
@@ -1423,7 +1423,7 @@
     "stock-transfers": "stock transferentziak",
     "stockmax": "Gehienezko stocka",
     "stockmin": "Gutxienezko stocka",
-    "storage-limit-almost": "Límite de almacenamiento casi alcanzado (%limit%). Quedan %free%",
+    "storage-limit-almost": "Biltegi muga ia hurrengora (%limit%). Faltan %free%",
     "storage-limit-reached": "Memoria bere mugara iritsi da",
     "stripe": "Stripe",
     "structured-data-csv": "CSV artxiboa",
@@ -1433,7 +1433,7 @@
     "subaccount-bad-codcuenta": "%codsubcuenta% azpikontuak kontu oker bat du esleituta.",
     "subaccount-belongs-other-year": "%subAccountCode% azpi-kontua beste ekitaldi batekoa da.",
     "subaccount-irpf": "PFEZ azpikontua",
-    "subaccount-irpf-creditor": "IRPF hartzekodunaren kontua",
+    "subaccount-irpf-creditor": "IRPF kreditari kontua",
     "subaccount-not-found": "%subAccountCode% azpi-kontua ez da aurkitu.",
     "subaccount-purchases": "Erosketa kontua",
     "subaccount-pyg-not-found": "Galdu-irabazien azpikontua ez da aurkitu",
