--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -508,7 +508,7 @@
     "email-replies": "risposta e-mail",
     "email-replies-to": "email-replies-to",
     "email-sent": "Inviato via Mail",
-    "email-sent-to": "email-sent-to",
+    "email-sent-to": "Inviato a email",
     "email-signature": "Firma Email",
     "email-to": "Email A",
     "emails": "Email",
@@ -518,7 +518,7 @@
     "empty": "Nessuno",
     "empty-contact-data": "Il contatto deve avere nome o e-mail o indirizzo",
     "empty-ref-or-missing": "Riferimento vuoto o prodotto non trovato",
-    "enable": "attivare",
+    "enable": "Abilita",
     "enable-api": "Attiva API",
     "enable-updates-beta": "Attiva aggiornamenti beta",
     "enabled": "Abilitato",
@@ -534,7 +534,7 @@
     "equivalent-account-not-found": "Impossibile trovare l'account equivalente su 0 nell'esercizio 1 <a href='2'> Hai importato il piano dei conti? <\/a>",
     "equivalent-subaccount-not-found": "Nessun subaccount equivalente a 0 è stato trovato per la copia.",
     "error": "Errore:% 1 $ s",
-    "error-checking-vat-number": "Error comprobando el número '%vat-number%' en el sistema VIES",
+    "error-checking-vat-number": "Errore nel verificare il numero '%vat-number%' nel sistema VIES",
     "error-connecting-memcache": "Errore durante la connessione al server Memcache.",
     "error-deleting-lines": "error-deleting-lines",
     "error-no-name-in-settings": "Error testing %viewName% view. No 'name' column in xml",
