Actualizadas las traducciones.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -1595,7 +1595,7 @@
     "using-apc": "Usando cache APC",
     "using-filecache": "Usando Filecache",
     "using-memcache": "Usando Memcache",
-    "valid-for-day": "Válido para un día",
+    "valid-for-day": "Platný po dobu jednoho dne",
     "validate": "Ověřit",
     "validate-iban": "Ověřit IBAN",
     "valuation-type": "Tipo de valoración",
@@ -1609,8 +1609,8 @@
     "vat": "IVA",
     "vat-document": "Documento",
     "vat-exception": "Excepción de IVA",
-    "vat-number-is-short": "El número '%vat-number%' es demasiado corto",
-    "vat-number-not-vies": "El número '%vat-number%' no está registrado en el sistema VIES",
+    "vat-number-is-short": "Číslo '%vat-number%' je příliš krátké",
+    "vat-number-not-vies": "Číslo '%vat-number%' není registrováno v systému VIES",
     "vat-regime": "Régimen impuestos",
     "VAT-register": "Příhlášení k DPH",
     "vat-regularization": "Regularización de IVA",
@@ -1618,10 +1618,10 @@
     "verified": "Verificado",
     "version": "Versión",
     "video": "Video",
-    "vies-check-success": "El número '%vat-number%' está registrado en el sistema VIES",
-    "view-api": "Ver API",
+    "vies-check-success": "Číslo '%vat-number%' je registrováno v systému VIES",
+    "view-api": "Zobrazit API",
     "view-column-net-subtotal": "Ver columna subtotal o neto",
-    "view-estimation": "Ver presupuesto",
+    "view-estimation": "Zobrazit odhad",
     "view-order": "Ver pedido",
     "warehouse": "Almacén",
     "warehouse-cant-be-same": "El almacén de orígen y de destino no puede ser el mismo.",
