--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -262,9 +262,9 @@
     "color-primary": "Primärfarbe",
     "color-secondary": "Sekundärfarbe",
     "color-success": "Erfolgsfarbe",
-    "color-warning": "Color advertencia",
+    "color-warning": "Color warnung",
     "colors": "Farben",
-    "column": "Columna",
+    "column": "Spalte",
     "columns": "Spalten",
     "combination-code": "Kombinationscode",
     "combinations": "Kombinationen",
@@ -280,8 +280,8 @@
     "company-commission-info": "Es wird nur für das ausgewählte Unternehmen angewendet",
     "company-manager": "Firmenleiter",
     "company-name": "Name der Firma",
-    "company-warehouse": "Empresa\/Almacén",
-    "comparative": "Comparativo",
+    "company-warehouse": "Unternehmen\/Lager",
+    "comparative": "Vergleich",
     "compared": "verglichen",
     "compatible": "kompatibel",
     "completed": "vollendet",
