--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1460,7 +1460,7 @@
     "supplier-delivery-notes": "Hornitzaileen albaranak",
     "supplier-estimation": "Hornitzaile aurrekontua",
     "supplier-estimations": "Hornitzaileen aurrekontuak",
-    "supplier-have-no-iban": "El proveedor %%supplier no tiene IBAN (cuenta bancaria)",
+    "supplier-have-no-iban": "Hornitzaileak %%iban-kontu bankurik ez du",
     "supplier-invoice": "Hornitzaile faktura",
     "supplier-invoice-deleted-successfully": "%docCode% erosketa faktura ondo ezabatu da.",
     "supplier-invoices": "Hornitzaileen fakturak",
@@ -1471,8 +1471,8 @@
     "supplier-products": "Hornitzailearen produktuak",
     "supplier-reference": "Hornitzailearen erreferentzia",
     "suppliers": "Hornitzaileak",
-    "support": "Soporte",
-    "supported-tax-re-subaccount": "Subcuenta recargo soportado",
+    "support": "Laguntza",
+    "supported-tax-re-subaccount": "Subkontu bidez ordaindutako zerga",
     "supported-tax-subaccount": "Jasandako BEZ azpikontua",
     "surcharge": "Errekargua",
     "surname": "Abizenak",
@@ -1498,7 +1498,7 @@
     "tax-transport": "Garraioaren zergak",
     "taxes": "Zergak",
     "telemetry-data-to-send": "Erregistratutako instalazioek aldizka FacturaScripts-en bertsio, PHP, herrialdea, hizkuntza eta plugin zerrenden berri ematen dute.",
-    "telephone-prefix": "Prefijo telefónico",
+    "telephone-prefix": "Telefono aurretikoa",
     "template": "Txantiloi",
     "template-error": "Txantiloi errorea",
     "template-not-found": "Ez da txantiloia aurkitu",
