- Eliminada la carpeta MyFiles/Cache al reconstruir. - Actualizadas las traducciones.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -1622,7 +1622,7 @@
     "view-api": "Zobrazit API",
     "view-column-net-subtotal": "Ver columna subtotal o neto",
     "view-estimation": "Zobrazit odhad",
-    "view-order": "Ver pedido",
+    "view-order": "Zobrazit objednávku",
     "warehouse": "Almacén",
     "warehouse-cant-be-same": "El almacén de orígen y de destino no puede ser el mismo.",
     "warehouse-must-be-same-business": "Los almacenes de origen y destino deben ser de la misma empresa",
@@ -1641,16 +1641,16 @@
     "wildcard-title": "Comodines reemplazables por valor",
     "without-closure": "Sin el cierre",
     "without-domicile": "Sin domiciliar",
-    "without-groups": "Sin grupo",
+    "without-groups": "Bez skupin",
     "without-regularization": "Sin regularización",
     "without-tax": "Sin IVA",
     "without-taxation": "Sin impuestos",
     "wizard": "Asistente",
     "wizard-p": "Rellene este formulario sobre su negocio para terminar la configuración.",
     "wizard-plugins": "Un plugin es un complemento que añade nuevas funcionalidades. Selecciona los plugins que quieras activar inmediatamente, o hazlo más tarde desde el panel de control.",
-    "work-events": "Eventos de trabajo",
-    "working-hours": "Horario de trabajo",
-    "write-a-message-here": "Escribe un mensaje aquí",
+    "work-events": "Pracovní události",
+    "working-hours": "Pracovní hodiny",
+    "write-a-message-here": "Napište zprávu zde",
     "x-column": "Columna X",
     "x-operation": "Operación sobre X",
     "y-column": "Columna Y",
