--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -291,14 +291,14 @@
     "configure-columns": "Spaltenkonfigurator",
     "confirm": "Bestätigen",
     "confirm-delete": "Löschen bestätigen?",
-    "connect": "Conectar",
+    "connect": "Verbinden",
     "contact": "Kontakt",
     "contact-data": "Kontaktdaten",
     "contact-info": "Kontakt Informationen",
     "contact-information": "Kontaktinformation",
     "contact-person": "Gesprächspartner",
     "contacts": "Kontakte",
-    "context": "Contexto",
+    "context": "Kontext",
     "continue": "fortsetzen",
     "contract": "Vertrag",
     "contracts": "Verträge",
