--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1568,7 +1568,7 @@
     "unit-profit": "Mozkin unitarioa",
     "unit-purchase-price": "Unitateko erosketa prezioa",
     "unit-sale-price": "Unitateko salmenta prezioa",
-    "unlimited": "Ilimitado",
+    "unlimited": "Mugagabe",
     "unlink": "Deskonektatu",
     "unlink-file": "Artxiboa lokabetu",
     "unlink-install-ok": "Instalazioa ondo ezabatu da erregistrotik.",
@@ -1583,19 +1583,19 @@
     "update-time": "Eguneratze ordua",
     "updated-model": "%model% (%key%) %desc% Eguneratua",
     "updater": "Eguneratzailea",
-    "updating-attached-relations": "Actualizando contadores de archivos adjuntos",
+    "updating-attached-relations": "Erantsitutako erlazioak eguneratzen",
     "upload-file": "Artxiboa kargatu",
     "uploaded-at": "Hemen kargatua",
     "url": "Webgunea",
     "use-gaps": "Hutsuneak erabili",
-    "use-holes-invoices-esp": "Si desmarcas el uso de huecos en facturas y eliminas alguna se quedará el hueco en la facturación y tendrás problemas con hacienda",
+    "use-holes-invoices-esp": "Fakturatzean zabor erabilera desmugatzen baduzu eta zatira bat ezabatzen baduzu, zaborra fakturazioan geratuko da eta zeregitasun arazoa izango duzu",
     "user": "Erabiltzailea",
-    "user-and-config": "Usuario y configuración",
+    "user-and-config": "Erabiltzaile eta konfigurazioa",
     "users": "Erabiltzaileak",
     "using-apc": "APC cachea erabiliz",
     "using-filecache": "Filecache erabiliz",
     "using-memcache": "Memcache erabiliz",
-    "valid-for-day": "Válido para un día",
+    "valid-for-day": "Egunerako baliozkotua",
     "validate": "Balioztatu",
     "validate-iban": "IBAN-a baieztatu",
     "valuation-type": "Balorazio mota",
@@ -1609,7 +1609,7 @@
     "vat": "BEZ",
     "vat-document": "Dokumentua",
     "vat-exception": "BEZaren salbuespena",
-    "vat-number-is-short": "El número '%vat-number%' es demasiado corto",
+    "vat-number-is-short": "'%vat-number%' zenbakia motza da",
     "vat-number-not-vies": "El número '%vat-number%' no está registrado en el sistema VIES",
     "vat-regime": "BEZ erregimena",
     "VAT-register": "Zerga liburua",
