--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -544,21 +544,21 @@
     "error-saving-lines": "error-saving-lines",
     "error-saving-stock": "¡Errore durante il salvataggio delle scorte!",
     "error-to-innodb": "Impossibile convertire la tabella di InnoDB.",
-    "error-updating-product-stock": "¡Errore durante l'aggiornamento degli articoli!",
+    "error-updating-product-stock": "Errore durante l'aggiornamento dello stock prodotti!",
     "errors": "errori",
     "es_EC": "Spagnolo (Equador)",
-    "es-tax-exception-e1": "España: excepción por el artículo 20 de la Ley del IVA",
-    "es-tax-exception-e2": "España: excepción por el artículo 21 de la Ley del IVA",
-    "es-tax-exception-e3": "España: excepción por el artículo 22 de la Ley del IVA",
-    "es-tax-exception-e4": "España: excepción por el artículo 23 y 24 de la Ley del IVA",
-    "es-tax-exception-e5": "España: excepción por el artículo 25 de la Ley del IVA",
-    "es-tax-exception-e6": "España: excepción por otra causa",
-    "es-tax-regime-agrarian": "Régimen especial de la agricultura, ganadería y pesca",
-    "es-tax-regime-cash-criteria": "Criterio de caja",
-    "es-tax-regime-especial-agp": "Régimen especial de la agricultura, ganadería y pesca",
-    "es-tax-regime-exempt": "Exento",
-    "es-tax-regime-general": "Régimen general",
-    "es-tax-regime-gold": "Régimen especial del oro de inversión",
+    "es-tax-exception-e1": "Spagna: eccezione per l'articolo 20 della legge sull'IVA",
+    "es-tax-exception-e2": "Spagna: eccezione per l'articolo 21 della legge sull'IVA",
+    "es-tax-exception-e3": "Spagna: eccezione per l'articolo 22 della legge sull'IVA",
+    "es-tax-exception-e4": "Spagna: eccezione per gli articoli 23 e 24 della legge sull'IVA",
+    "es-tax-exception-e5": "Spagna: eccezione per l'articolo 25 della legge sull'IVA",
+    "es-tax-exception-e6": "Spagna: eccezione per altro motivo",
+    "es-tax-regime-agrarian": "Regime speciale dell'agricoltura, dell'allevamento e della pesca",
+    "es-tax-regime-cash-criteria": "Criterio di cassa",
+    "es-tax-regime-especial-agp": "Regime speciale dell'agricoltura, dell'allevamento e della pesca",
+    "es-tax-regime-exempt": "Esente",
+    "es-tax-regime-general": "Regime generale",
+    "es-tax-regime-gold": "Regime speciale dell'oro di investimento",
     "es-tax-regime-group-entities": "Régimen especial del grupo de entidades",
     "es-tax-regime-simplified": "Régimen simplificado",
     "es-tax-regime-surcharge": "Recargo de equivalencia",
