--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -958,7 +958,7 @@
     "missing-epigraph-data": "Faltan datos en el epígrafe.",
     "missing-file": "Falta el archivo",
     "missing-file-help": "Parece que este archivo no se encuentra en tu instalación. Quizás no lo uses, pero <em>no puedes eliminarlo<\/em>.",
-    "mobile": "Móvil",
+    "mobile": "Telefon komórkowy",
     "model": "Modelo",
     "model-not-found": "Modelo no encontrado: %model%",
     "monday": "Lunes",
