--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -547,11 +547,11 @@
     "error-updating-product-stock": "Error en actualitzar l'estoc del producte!",
     "errors": "Erros",
     "es_EC": "Espanyol (Ecuador)",
-    "es-tax-exception-e1": "España: excepción por el artículo 20 de la Ley del IVA",
-    "es-tax-exception-e2": "España: excepción por el artículo 21 de la Ley del IVA",
-    "es-tax-exception-e3": "España: excepción por el artículo 22 de la Ley del IVA",
-    "es-tax-exception-e4": "España: excepción por el artículo 23 y 24 de la Ley del IVA",
-    "es-tax-exception-e5": "España: excepción por el artículo 25 de la Ley del IVA",
+    "es-tax-exception-e1": "Espanya: excepció per l'article 20 de la Llei de l'IVA",
+    "es-tax-exception-e2": "Espanya: excepció per l'article 21 de la Llei de l'IVA",
+    "es-tax-exception-e3": "Espanya: excepció per l'article 22 de la Llei de l'IVA",
+    "es-tax-exception-e4": "Espanya: excepció per l'article 23 i 24 de la Llei de l'IVA",
+    "es-tax-exception-e5": "Espanya: excepció per l'article 25 de la Llei de l'IVA",
     "es-tax-exception-e6": "España: excepción por otra causa",
     "es-tax-regime-agrarian": "Régimen especial de la agricultura, ganadería y pesca",
     "es-tax-regime-cash-criteria": "Criterio de caja",
