Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -621,6 +621,7 @@
     "filters": "Filtres",
     "finalize": "Finalitzar",
     "find-problems": "Cerca problemes",
+    "finished": "Finalitzat",
     "finished-cron": "S'ha finalitzat l'execució cron de FacturaScripts, el temps necessari: %timeNeeded%",
     "first-quarter": "Primer trimestre",
     "first-steps": "Primers passos",
@@ -1502,6 +1503,7 @@
     "template": "Plantilla",
     "template-error": "Error a la plantilla",
     "template-not-found": "Template no trobat",
+    "templates": "Plantilles",
     "test": "Test",
     "test-mail-not-implemented": "El test del controlador de correu Mail no està implementat",
     "test-sendmail-not-implemented": "El test del controlador de correu sendmail no està implementat",
