--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -621,6 +621,7 @@
     "filters": "Filtros",
     "finalize": "Finalizar",
     "find-problems": "Encontrar problemas",
+    "finished": "Dokončeno",
     "finished-cron": "Dokončeno spouštění cronu. Časová náročnost: %timeNeeded%",
     "first-quarter": "1º trimestre",
     "first-steps": "Primeros pasos",
@@ -1502,6 +1503,7 @@
     "template": "Plantilla",
     "template-error": "Error en la plantilla",
     "template-not-found": "Plantilla no encontrada",
+    "templates": "Šablony",
     "test": "Test",
     "test-mail-not-implemented": "El test del controlador de correo Mail no está implementado",
     "test-sendmail-not-implemented": "El test del controlador de correo sendmail no está implementado",
