--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -621,6 +621,7 @@
     "filters": "Filters",
     "finalize": "Finalize",
     "find-problems": "Find Problems",
+    "finished": "Finished",
     "finished-cron": "Finished FacturaScripts cron execution, needed time: %timeNeeded%",
     "first-quarter": "1st quarter",
     "first-steps": "First steps",
@@ -1502,6 +1503,7 @@
     "template": "Template",
     "template-error": "Template error",
     "template-not-found": "Template not found",
+    "templates": "Templates",
     "test": "Test",
     "test-mail-not-implemented": "Mail handler test is not implemented",
     "test-sendmail-not-implemented": "Sendmail mail handler test not implemented",
