--- a/Core/Translation/es_CL.json
+++ b/Core/Translation/es_CL.json
@@ -621,6 +621,7 @@
     "filters": "Filtros",
     "finalize": "Finalizar",
     "find-problems": "Encontrar problemas",
+    "finished": "Finalizado",
     "finished-cron": "Terminada la ejecución del cron. Tiempo consumido: %timeNeeded% segundos, Memoria: %memoryUsed%",
     "first-quarter": "1º trimestre",
     "first-steps": "Primeros pasos",
@@ -1502,6 +1503,7 @@
     "template": "Plantilla",
     "template-error": "template-error",
     "template-not-found": "Plantilla no encontrada",
+    "templates": "Plantillas",
     "test": "Test",
     "test-mail-not-implemented": "El test del controlador de correo Mail no está implementado",
     "test-sendmail-not-implemented": "El test del controlador de correo sendmail no está implementado",
