--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -621,6 +621,7 @@
     "filters": "Iragazkiak",
     "finalize": "Bukatu",
     "find-problems": "Arazoak bilatu",
+    "finished": "Amaitua",
     "finished-cron": "FacturaScripts cron exekuzioa amaitu da, erabilitako denbora: %timeNeeded%",
     "first-quarter": "Lehenengo hiruhilekoa",
     "first-steps": "Aurrenengo urratsak",
@@ -1502,6 +1503,7 @@
     "template": "Txantiloi",
     "template-error": "Txantiloi errorea",
     "template-not-found": "Ez da txantiloia aurkitu",
+    "templates": "Txantiloia",
     "test": "Froga",
     "test-mail-not-implemented": "Posta kudeatzailearen proba ez da inplementatu",
     "test-sendmail-not-implemented": "Sendmail posta kudeatzailearen proba ez da inplementatu",
