--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -621,6 +621,7 @@
     "filters": "Filtres",
     "finalize": "finaliser",
     "find-problems": "Trouver des problèmes",
+    "finished": "Terminé",
     "finished-cron": "L'exécution des tâches programmées FacturaScripts est terminée. Temps nécessaire : %timeNeeded%",
     "first-quarter": "Premier trimestre",
     "first-steps": "Premiers pas",
@@ -1502,6 +1503,7 @@
     "template": "Modèle",
     "template-error": "Erreur du modèle",
     "template-not-found": "Modèle non trouvé",
+    "templates": "Modèles",
     "test": "Essai",
     "test-mail-not-implemented": "El test del controlador de correo Mail no está implementado",
     "test-sendmail-not-implemented": "El test del controlador de correo sendmail no está implementado",
