--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -621,6 +621,7 @@
     "filters": "Filtros",
     "finalize": "rematar",
     "find-problems": "Atopar problemas",
+    "finished": "Finalizado",
     "finished-cron": "Rematada a execución do cron. Tempo consumido: %timeNeeded%",
     "first-quarter": "Primeiro trimestre",
     "first-steps": "Primeiros pasos",
@@ -1502,6 +1503,7 @@
     "template": "Modelo",
     "template-error": "Erro na plantilla",
     "template-not-found": "Template non atopou",
+    "templates": "Padróns",
     "test": "Test",
     "test-mail-not-implemented": "A proba do controlador de correo Mail non está implementada",
     "test-sendmail-not-implemented": "A proba do controlador de correo sendmail non está implementada",
