--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -471,7 +471,7 @@
     "document-sequence": "document-sequence",
     "document-sequences": "document-sequences",
     "document-states": "Document states",
-    "document-type": "Tipo documento",
+    "document-type": "Tipo di documento",
     "document-type-valid-length": "Tipo di documento non valido. Deve essere compreso tra 1 e 20 caratteri.",
     "document-wildcard-info": "Document indicated in the head of the accounting entry",
     "document-without-total": "Documento %document% senza totali o con il totale a 0.",
@@ -621,6 +621,7 @@
     "filters": "Filtri",
     "finalize": "finalize",
     "find-problems": "Encontrar problemas",
+    "finished": "Finalizado",
     "finished-cron": "Finished FacturaScripts cron execution, needed time: %timeNeeded%",
     "first-quarter": "Primer trimestre",
     "first-steps": "first-steps",
@@ -1502,6 +1503,7 @@
     "template": "Modello",
     "template-error": "template-error",
     "template-not-found": "Modello non trovato",
+    "templates": "Plantillas",
     "test": "Test",
     "test-mail-not-implemented": "El test del controlador de correo Mail no está implementado",
     "test-sendmail-not-implemented": "El test del controlador de correo sendmail no está implementado",
