--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -621,6 +621,7 @@
     "filters": "Filtros",
     "finalize": "finalize",
     "find-problems": "Encontrar problemas",
+    "finished": "Finalizado",
     "finished-cron": "Finalizou a execução do cron do FacturaScripts, tempo transcorrido: %timeNeeded%",
     "first-quarter": "Primer trimestre",
     "first-steps": "first-steps",
@@ -1502,6 +1503,7 @@
     "template": "Modelo",
     "template-error": "template-error",
     "template-not-found": "Modelo não encontrado",
+    "templates": "Plantillas",
     "test": "Test",
     "test-mail-not-implemented": "El test del controlador de correo Mail no está implementado",
     "test-sendmail-not-implemented": "El test del controlador de correo sendmail no está implementado",
