--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -621,6 +621,7 @@
     "filters": "Filtres",
     "finalize": "Acabar",
     "find-problems": "Encontrar problemas",
+    "finished": "Finalizado",
     "finished-cron": "L'eixecució del cron FacturaScripts ja ha acabat. El temps necessari ha segut de: %timeNeeded%",
     "first-quarter": "Primer trimestre",
     "first-steps": "Primers passos",
@@ -1502,6 +1503,7 @@
     "template": "Plantilla",
     "template-error": "Error en la plantilla",
     "template-not-found": "No s'ha trobat la plantilla",
+    "templates": "Plantillas",
     "test": "Prova",
     "test-mail-not-implemented": "El test del controlador de correo Mail no está implementado",
     "test-sendmail-not-implemented": "El test del controlador de correo sendmail no está implementado",
