--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -621,6 +621,7 @@
     "filters": "Filter",
     "finalize": "Beenden",
     "find-problems": "Encontrar problemas",
+    "finished": "Finalizado",
     "finished-cron": "Finished FacturaScripts cron execution, needed time: %timeNeeded%",
     "first-quarter": "Primer trimestre",
     "first-steps": "erste Schritte",
@@ -1502,6 +1503,7 @@
     "template": "Vorlage",
     "template-error": "template-error",
     "template-not-found": "Vorlage nicht gefunden",
+    "templates": "Plantillas",
     "test": "Test",
     "test-mail-not-implemented": "El test del controlador de correo Mail no está implementado",
     "test-sendmail-not-implemented": "El test del controlador de correo sendmail no está implementado",
